made correct answer more visible

--- a/public/styles.css
+++ b/public/styles.css
@@ -559,6 +559,16 @@ section.answers button:hover {
     font-size: 20px;
 }
 
+.text_container p.answer_text {
+    font-size: 20px;
+}
+
+.text_container span {
+    color: #DD2020;
+}
+
+
+
 .next_question_button {
     padding: 20px 30px;
     border-radius: 3px;
